<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Compensation</string>
    <string name="common_rectype_blood">Blood sugar</string>
    <string name="common_rectype_ins">Injection</string>
    <string name="common_rectype_meal">Meal</string>
    <string name="common_rectype_note">Note</string>
    <string name="diary_button_add">Add</string>
    <string name="diary_context_common_edit">Edit</string>
    <string name="diary_context_common_remove">Remove</string>
    <string name="diary_title">Diary</string>
    <string name="editor_blood_field_finger">Finger</string>
    <string name="editor_blood_title">BS</string>
    <string name="editor_common_field_time">Time</string>
    <string name="editor_common_field_value">Value</string>
    <string name="editor_common_save">Save</string>
    <string name="editor_meal_button_add">Add</string>
    <string name="editor_meal_field_fooddish">Food/dish</string>
    <string name="editor_meal_field_mass">Mass, g</string>
    <string name="editor_meal_label_carbs">g carbs.</string>
    <string name="editor_meal_label_dose">U</string>
    <string name="editor_meal_title">Meal</string>
    <string name="editor_note_field_text">Text</string>
    <string name="editor_note_title">Note</string>
    <string name="foodbase_search_hint">Search&#8230;</string>
    <string name="foodbase_subinfo" formatted="false">P %.1f\t\tF %.1f\t\tC %.1f\t\tV %.1f</string>
    <string name="foodbase_title">Food base</string>
    <string name="main_option_diary">Diary</string>
    <string name="main_option_dishbase">Dish base</string>
    <string name="main_option_foodbase">Food base</string>
    <string name="main_option_preferences">Preferences</string>
    <string name="main_option_sync">Sync</string>
    <string name="main_option_test">Test</string>
    <string name="main_title">Compensation</string>
    <string name="preferences_sync">Account</string>
    <string name="preferences_sync_password">Password</string>
    <string name="preferences_sync_server">Server</string>
    <string name="preferences_sync_username">Login (e-mail)</string>
    <string name="preferences_title">Preferences</string>

    <!-- ========================================================================= -->


    <!-- Arrays -->

    <string-array name="fingers">
        <item>[Левая]: большой</item>
        <item>[Левая]: указательный</item>
        <item>[Левая]: средний</item>
        <item>[Левая]: безымянный</item>
        <item>[Левая]: мизинец</item>
        <item>[Правая]: мизинец</item>
        <item>[Правая]: безымянный</item>
        <item>[Правая]: средний</item>
        <item>[Правая]: указательный</item>
        <item>[Правая]: большой</item>
    </string-array>
    <string-array name="fingers_middle">
        <item>Лев.большой</item>
        <item>Лев.указательный</item>
        <item>Лев.средний</item>
        <item>Лев.безымянный</item>
        <item>Лев.мизинец</item>
        <item>Пр.мизинец</item>
        <item>Пр.безымянный</item>
        <item>Пр.средний</item>
        <item>Пр.указательный</item>
        <item>Пр.большой</item>
    </string-array>
    <string-array name="fingers_short">
        <item>БЛ</item>
        <item>1Л</item>
        <item>2Л</item>
        <item>3Л</item>
        <item>4Л</item>
        <item>4П</item>
        <item>3П</item>
        <item>2П</item>
        <item>1П</item>
        <item>БП</item>
    </string-array>

</resources>