<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_editor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutMealParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        tools:context=".ActivityMeal" >

        <TextView
            android:id="@+id/labelMealTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_common_field_time" />

        <RelativeLayout
            android:id="@+id/layoutMealDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TimePicker
                android:id="@+id/pickerMealTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <DatePicker
                android:id="@+id/pickerMealDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/pickerMealTime"
                android:paddingLeft="@dimen/padding_small" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_meal_field_fooddish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:completionThreshold="1"
                android:ems="10"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black" >

                <requestFocus />
            </AutoCompleteTextView>

            <EditText
                android:id="@+id/editItemMass"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="numberDecimal|text"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_additem"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:focusable="false"
                android:text="@string/editor_meal_button_add" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/padding_small"
            android:background="#F0F0F0" >

            <TextView
                android:id="@+id/textMealCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/editor_meal_label_carbs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textMealDose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/editor_meal_label_dose"
                android:textStyle="bold|normal" />
        </RelativeLayout>

        <ListView
            android:id="@+id/ListView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" >
        </ListView>

        <Button
            android:id="@+id/buttonMealOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/editor_common_save" />
    </LinearLayout>

</LinearLayout>