<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBloodScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/LayoutBloodParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        tools:context=".ActivityBlood" >

        <TextView
            android:id="@+id/labelBloodTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_common_field_time" />

        <RelativeLayout
            android:id="@+id/LayoutBloodDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TimePicker
                android:id="@+id/pickerBloodTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <DatePicker
                android:id="@+id/pickerBloodDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/pickerBloodTime"
                android:paddingLeft="@dimen/padding_small" />

        </RelativeLayout>

        <TextView
            android:id="@+id/labelBloodValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editBloodValue"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/editor_common_field_value" />

        <EditText
            android:id="@+id/editBloodValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|numberDecimal"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelBloodFinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinnerBloodFinger"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/editor_blood_field_finger" />

        <Spinner
            android:id="@+id/spinnerBloodFinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fingers_middle" />

        <Button
            android:id="@+id/buttonBloodOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/editor_common_save" />
    </LinearLayout>

</ScrollView>